--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,13 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".AddActivity"
-        android:label="@string/title_activity_add"/>
+        android:label="@string/title_activity_add" />
     <activity
         android:name=".SettingsActivity"
         android:label="@string/title_activity_settings" />
+    <activity
+        android:name=".UpdateGroupActivity"
+        android:label="@string/title_activity_updategroup" />
     <activity
         android:name=".StockDataActivity"
         android:label="@string/title_activity_stockdata" />
@@ -27,6 +30,7 @@
       </intent-filter>
     </activity>
   </application>
+
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
