--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
   implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
   implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
   implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+  implementation 'com.squareup.retrofit2:converter-simplexml:2.9.0'
 
   //Okhttp3
   implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
