--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
@@ -15,7 +18,7 @@ android {
   compileSdkVersion 29
   buildToolsVersion '29.0.3'
   defaultConfig {
-    applicationId 'com.example.android.stockroom'
+    applicationId 'com.android.stockroom'
     minSdkVersion 29
     targetSdkVersion 29
     versionCode 1
@@ -62,6 +65,11 @@ dependencies {
   implementation 'androidx.preference:preference:1.1.1'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation "androidx.core:core-ktx:1.3.1"
+
+  // Add the Firebase SDK for Google Analytics.
+  implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
+  // Add the Firebase Crashlytics SDK.
+  implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
 
   def moshiVersion = '1.9.3'
   def retrofit2_version = '2.9.0'
