--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.stockroom">
 
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"
+      android:fullBackupContent="@xml/backup_descriptor" />
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".ListActivity"></activity>
+    <activity android:name=".ListActivity" />
     <activity
         android:name=".AddActivity"
         android:label="@string/title_activity_add" />
@@ -32,8 +36,5 @@
       </intent-filter>
     </activity>
   </application>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-  <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
