--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
     applicationId 'com.thecloudsite.stockroom'
     minSdkVersion 29
     targetSdkVersion 30
-    versionCode 5
-    versionName "1.0.5"
+    versionCode 6
+    versionName "1.0.6"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     javaCompileOptions {
@@ -71,6 +71,7 @@ dependencies {
   implementation "androidx.core:core-ktx:1.3.1"
 
   // Add the Firebase SDK for Google Analytics.
+  implementation 'com.google.firebase:firebase-config-ktx:19.2.0'
   implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
   // Add the Firebase Crashlytics SDK.
   implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
