refactor import sub folders

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,12 @@
 # The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048m
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.parallel=true
+android.enableBuildCache=true
+org.gradle.caching=true
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
