--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".ListActivity" />
+    <activity android:name=".list.ListActivity" />
     <activity
         android:name=".AddActivity"
         android:label="@string/title_activity_add" />
