--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ repositories {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.1' // 2.0.2 funktionieren die guidelines nicht mehr
   implementation 'com.google.android.material:material:1.2.1'
   implementation 'androidx.preference:preference:1.1.1'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -72,7 +72,7 @@ dependencies {
 
   // Add the Firebase SDK for Google Analytics.
   implementation 'com.google.firebase:firebase-config-ktx:19.2.0'
-  implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+  implementation 'com.google.firebase:firebase-analytics-ktx:17.6.0'
   // Add the Firebase Crashlytics SDK.
   implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.2'
   // Add the dependency for the Performance Monitoring library
@@ -152,7 +152,7 @@ dependencies {
   implementation 'com.larswerkman:HoloColorPicker:1.5'
 
   // Timeline
-  implementation 'com.github.sangcomz:StickyTimeLine:v0.0.17'
+  implementation 'com.github.sangcomz:StickyTimeLine:v0.1.0'
 
   // Testing
   testImplementation 'junit:junit:4.13'
