--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ repositories {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.1' // 2.0.2 funktionieren die guidelines nicht mehr
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
   implementation 'com.google.android.material:material:1.2.1'
   implementation 'androidx.preference:preference:1.1.1'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
