--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
   implementation 'com.google.android.material:material:1.2.1'
-  implementation 'androidx.preference:preference:1.1.1'
+  implementation 'androidx.preference:preference-ktx:1.1.1'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation "androidx.core:core-ktx:1.3.2"
 
