--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,9 @@ dependencies {
   // MPAndroidChart
   implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+  // TreeMapChart
+  implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
   // FlowLayout
   implementation 'org.apmem.tools:layouts:1.10@aar'
 
