--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
     }
   }
   compileSdkVersion 30
-  buildToolsVersion '29.0.3'
   defaultConfig {
     applicationId 'com.thecloudsite.stockroom'
     minSdkVersion 29
@@ -52,6 +51,10 @@ android {
   }
   kotlinOptions {
     jvmTarget = JavaVersion.VERSION_1_8.toString()
+  }
+
+  buildFeatures {
+    viewBinding true
   }
 }
 
