--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,7 +141,7 @@ dependencies {
   androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
   // Lifecycle components
-  implementation "androidx.lifecycle:lifecycle-extensions:${archLifecycleVersion}"
+  implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
   implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.archLifecycleVersion"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.archLifecycleVersion"
 
