--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:name=".UpdateGroupActivity"
         android:label="@string/title_activity_updategroup" />
     <activity
+        android:name=".CalcActivity"
+        android:label="@string/title_activity_calc" />
+    <activity
         android:name=".StockDataActivity"
         android:label="@string/title_activity_stockdata" />
     <activity
