--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:name=".calc.CalcActivity"
         android:label="@string/title_activity_calc" />
     <activity
+        android:name=".calc.CalcSettingsActivity"
+        android:label="@string/title_activity_calc_settings" />
+    <activity
         android:name=".StockDataActivity"
         android:label="@string/title_activity_stockdata" />
     <activity
