--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+    debug {
+      FirebasePerformance {
+        instrumentationEnabled false
+      }
+    }
   }
 
   packagingOptions {
