--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-beta05'
+        classpath 'com.android.tools.build:gradle:4.2.0-beta06'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath 'com.google.gms:google-services:4.3.5'
@@ -17,7 +18,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
         // To benefit from the latest Performance Monitoring plugin features,
         // update your Android Gradle Plugin dependency to at least v3.4.0
-        classpath 'com.android.tools.build:gradle:4.2.0-beta05'
+        classpath 'com.android.tools.build:gradle:4.2.0-beta06'
         // Add the dependency for the Performance Monitoring plugin
         classpath 'com.google.firebase:perf-plugin:1.3.5'  // Performance Monitoring plugin
     }
@@ -26,7 +27,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
