--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,7 +162,7 @@ dependencies {
   implementation 'com.larswerkman:HoloColorPicker:1.5'
 
   // Timeline
-  implementation 'com.github.sangcomz:StickyTimeLine:v0.1.1'
+  // implementation 'com.github.sangcomz:StickyTimeLine:v0.1.1'
 
   // Testing
   testImplementation 'junit:junit:4.13'
