--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'com.google.android.material:material:1.3.0'
+  implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
   implementation 'androidx.preference:preference-ktx:1.1.1'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation "androidx.core:core-ktx:1.3.2"
