--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,18 +75,18 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.core:core-ktx:1.6.0"
 
     // Add the Firebase SDK for Google Analytics.
-    implementation 'com.google.firebase:firebase-config-ktx:21.0.0'
+    implementation 'com.google.firebase:firebase-config-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-analytics-ktx:19.0.0'
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.1'
     // Add the dependency for the Performance Monitoring library
     implementation 'com.google.firebase:firebase-perf:20.0.2'
     // Add the Realtime Database SDK
