--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    signingConfigs {
+    signingConfigs {kl
         stockroom {
             storeFile file(RELEASE_STORE_FILE)
             storePassword RELEASE_STORE_PASSWORD
@@ -75,7 +75,7 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -89,8 +89,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.1'
     // Add the dependency for the Performance Monitoring library
     implementation 'com.google.firebase:firebase-perf:20.0.2'
-    // Add the Realtime Database SDK
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    // Add the Realtime Database SDKci
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
     implementation 'androidx.cardview:cardview:1.0.0'
     // Add the dependencies for FirebaseUI
     //implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
