--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            FirebasePerformance {
+                instrumentationEnabled false
+            }
         }
         debug {
             FirebasePerformance {
