--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,12 +90,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx:20.0.0'
     // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.5'
-    // Add the dependency for the Performance Monitoring library
+    // Add the dependency for the Performance Monitoring library.
     implementation 'com.google.firebase:firebase-perf:20.0.4'
-    // Add the Realtime Database SDKci
+    // Add the Realtime Database SDK.
     implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     implementation 'androidx.cardview:cardview:1.0.0'
-    // Add the dependencies for FirebaseUI
+    // Add the dependencies for FirebaseUI.
     //implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     // Add Firebase Authentication to your app and Google Play services
     //implementation 'com.google.firebase:firebase-auth-ktx:19.3.2'
