--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,21 +79,21 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.core:core-ktx:1.8.0"
 
     // Add the Firebase SDK for Google Analytics.
-    implementation 'com.google.firebase:firebase-config-ktx:21.1.0'
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    implementation 'com.google.firebase:firebase-config-ktx:21.1.1'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.0'
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.10'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.12'
     // Add the dependency for the Performance Monitoring library.
-    implementation 'com.google.firebase:firebase-perf:20.0.6'
+    implementation 'com.google.firebase:firebase-perf:20.1.0'
     // Add the Realtime Database SDK.
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -111,13 +111,14 @@ dependencies {
     // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
     //implementation 'com.twitter.sdk.android:twitter-core:3.x'
 
-    def moshiVersion = '1.12.0'
+    def moshiVersion = '1.13.0'
     def retrofit2_version = '2.9.0'
     def okhttp3_version = '4.8.0'
     def kotlinCoroutineVersion = "1.4.1"
 
     //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+    annotationProcessor "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 
     //Retrofit2
@@ -152,6 +153,7 @@ dependencies {
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
@@ -175,7 +177,7 @@ dependencies {
     // implementation 'com.github.sangcomz:StickyTimeLine:v0.1.1'
 
     // Testing
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
     androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
