--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.caching=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
