--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
     sourceSets {
         // Adds exported schema location as test app assets.
