--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
             v2SigningEnabled true
         }
     }
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         applicationId 'com.thecloudsite.stockroom'
         minSdkVersion 34
@@ -116,7 +116,7 @@ dependencies {
     def moshiVersion = '1.15.0'
     def retrofit2_version = '2.9.0'
     def okhttp3_version = '4.8.0'
-    def kotlinCoroutineVersion = "1.4.1"
+    def kotlinCoroutineVersion = "1.7.3"
 
     //Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
