--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
             FirebasePerformance {
                 instrumentationEnabled false
             }
+            signingConfig signingConfigs.stockroom
         }
         debug {
             FirebasePerformance {
